--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,54 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a98386">  <td>22/12/07 16:43:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Login.afterClass()[pri:0, instance:sample.Login@28261e8e]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@398457879</td>   <td></td> </tr>
-<tr bgcolor="a98386">  <td>22/12/07 16:43:34</td>   <td>6925</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Login.afterClass()[pri:0, instance:sample.Login@6d60fe40]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@398457879</td>   <td></td> </tr>
-<tr bgcolor="a98386">  <td>22/12/07 16:43:34</td>   <td>6936</td> <td title="&lt;&lt;Login.afterSuite()[pri:0, instance:sample.Login@6d60fe40]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@398457879</td>   <td></td> </tr>
-<tr bgcolor="a98386">  <td>22/12/07 16:43:27</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;Login.afterTest()[pri:0, instance:sample.Login@28261e8e]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@398457879</td>   <td></td> </tr>
-<tr bgcolor="a98386">  <td>22/12/07 16:43:34</td>   <td>6926</td> <td>&nbsp;</td><td title="&lt;&lt;Login.afterTest()[pri:0, instance:sample.Login@6d60fe40]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@398457879</td>   <td></td> </tr>
-<tr bgcolor="a98386">  <td>22/12/07 16:43:20</td>   <td>-6391</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login.beforeClass()[pri:0, instance:sample.Login@28261e8e]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@398457879</td>   <td></td> </tr>
-<tr bgcolor="a98386">  <td>22/12/07 16:43:27</td>   <td>21</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login.beforeClass()[pri:0, instance:sample.Login@6d60fe40]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@398457879</td>   <td></td> </tr>
-<tr bgcolor="a98386">  <td>22/12/07 16:43:20</td>   <td>-6433</td> <td title="&gt;&gt;Login.beforeSuite()[pri:0, instance:sample.Login@6d60fe40]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@398457879</td>   <td></td> </tr>
-<tr bgcolor="a98386">  <td>22/12/07 16:43:20</td>   <td>-6415</td> <td>&nbsp;</td><td title="&gt;&gt;Login.beforeTest()[pri:0, instance:sample.Login@28261e8e]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@398457879</td>   <td></td> </tr>
-<tr bgcolor="a98386">  <td>22/12/07 16:43:27</td>   <td>21</td> <td>&nbsp;</td><td title="&gt;&gt;Login.beforeTest()[pri:0, instance:sample.Login@6d60fe40]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@398457879</td>   <td></td> </tr>
-<tr bgcolor="a98386">  <td>22/12/07 16:43:24</td>   <td>-2263</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login.setUp()[pri:0, instance:sample.Login@28261e8e]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@398457879</td>   <td></td> </tr>
-<tr bgcolor="a98386">  <td>22/12/07 16:43:24</td>   <td>-2263</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login.setUp()[pri:0, instance:sample.Login@28261e8e]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@398457879</td>   <td></td> </tr>
-<tr bgcolor="a98386">  <td>22/12/07 16:43:31</td>   <td>4770</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login.setUp()[pri:0, instance:sample.Login@6d60fe40]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@398457879</td>   <td></td> </tr>
-<tr bgcolor="a98386">  <td>22/12/07 16:43:31</td>   <td>4770</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login.setUp()[pri:0, instance:sample.Login@6d60fe40]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@398457879</td>   <td></td> </tr>
-<tr bgcolor="a98386">  <td>22/12/07 16:43:31</td>   <td>4770</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login.setUp()[pri:0, instance:sample.Login@6d60fe40]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@398457879</td>   <td></td> </tr>
-<tr bgcolor="a98386">  <td>22/12/07 16:43:27</td>   <td>-137</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Login.tearDown()[pri:0, instance:sample.Login@28261e8e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@398457879</td>   <td></td> </tr>
-<tr bgcolor="a98386">  <td>22/12/07 16:43:27</td>   <td>-137</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Login.tearDown()[pri:0, instance:sample.Login@28261e8e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@398457879</td>   <td></td> </tr>
-<tr bgcolor="a98386">  <td>22/12/07 16:43:33</td>   <td>6808</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Login.tearDown()[pri:0, instance:sample.Login@6d60fe40]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@398457879</td>   <td></td> </tr>
-<tr bgcolor="a98386">  <td>22/12/07 16:43:33</td>   <td>6808</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Login.tearDown()[pri:0, instance:sample.Login@6d60fe40]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@398457879</td>   <td></td> </tr>
-<tr bgcolor="a98386">  <td>22/12/07 16:43:33</td>   <td>6808</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Login.tearDown()[pri:0, instance:sample.Login@6d60fe40]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@398457879</td>   <td></td> </tr>
-<tr bgcolor="a98386">  <td>22/12/07 16:43:33</td>   <td>6071</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.verifyUserLoginWithInvalidCredentials()[pri:4, instance:sample.Login@6d60fe40]">verifyUserLoginWithInvalidCredentials</td> 
-  <td>main@398457879</td>   <td></td> </tr>
-<tr bgcolor="a98386">  <td>22/12/07 16:43:28</td>   <td>1325</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.verifyUserLoginWithInvalidUserNameAndValidPassword()[pri:2, instance:sample.Login@6d60fe40]">verifyUserLoginWithInvalidUserNameAndValidPassword</td> 
-  <td>main@398457879</td>   <td></td> </tr>
-<tr bgcolor="a98386">  <td>22/12/07 16:43:23</td>   <td>-3380</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.verifyUserLoginWithValidCredential()[pri:1, instance:sample.Login@28261e8e]">verifyUserLoginWithValidCredential</td> 
-  <td>main@398457879</td>   <td></td> </tr>
-<tr bgcolor="a98386">  <td>22/12/07 16:43:30</td>   <td>3776</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.verifyUserLoginWithValidUserNameAndInvalidPassword()[pri:3, instance:sample.Login@6d60fe40]">verifyUserLoginWithValidUserNameAndInvalidPassword</td> 
-  <td>main@398457879</td>   <td></td> </tr>
-<tr bgcolor="a98386">  <td>22/12/07 16:43:26</td>   <td>-824</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.verifyUserLoginWithoutGivingCredentials()[pri:5, instance:sample.Login@28261e8e]">verifyUserLoginWithoutGivingCredentials</td> 
-  <td>main@398457879</td>   <td></td> </tr>
+<tr bgcolor="696385">  <td>22/12/07 19:07:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MultiBrowser.afterTest()[pri:0, instance:cross_Browser.MultiBrowser@5149d738]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@84113572</td>   <td></td> </tr>
+<tr bgcolor="696385">  <td>22/12/07 19:07:25</td>   <td>8744</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MultiBrowser.afterTest()[pri:0, instance:cross_Browser.MultiBrowser@6e9a5ed8]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@84113572</td>   <td></td> </tr>
+<tr bgcolor="696385">  <td>22/12/07 19:07:01</td>   <td>-15031</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MultiBrowser.beforeTest(java.lang.String)[pri:0, instance:cross_Browser.MultiBrowser@5149d738]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@84113572</td>   <td></td> </tr>
+<tr bgcolor="696385">  <td>22/12/07 19:07:18</td>   <td>1387</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MultiBrowser.beforeTest(java.lang.String)[pri:0, instance:cross_Browser.MultiBrowser@6e9a5ed8]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@84113572</td>   <td></td> </tr>
+<tr bgcolor="696385">  <td>22/12/07 19:07:16</td>   <td>-361</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MultiBrowser.click_Carousel()[pri:0, instance:cross_Browser.MultiBrowser@5149d738]">click_Carousel</td> 
+  <td>main@84113572</td>   <td></td> </tr>
+<tr bgcolor="696385">  <td>22/12/07 19:07:25</td>   <td>8588</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MultiBrowser.click_Carousel()[pri:0, instance:cross_Browser.MultiBrowser@6e9a5ed8]">click_Carousel</td> 
+  <td>main@84113572</td>   <td></td> </tr>
 </table>
