--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,18 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ce7ed4">  <td>22/12/28 18:43:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProvider_Object.m1(java.lang.String,java.lang.String)[pri:0, instance:dataProviders.DataProvider_Object@60099951]">m1</td> 
-  <td>main@1530446316</td>   <td></td> </tr>
-<tr bgcolor="ce7ed4">  <td>22/12/28 18:43:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProvider_Object.m1(java.lang.String,java.lang.String)[pri:0, instance:dataProviders.DataProvider_Object@60099951]">m1</td> 
-  <td>main@1530446316</td>   <td></td> </tr>
-<tr bgcolor="ce7ed4">  <td>22/12/28 18:43:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProvider_Object.m1(java.lang.String,java.lang.String)[pri:0, instance:dataProviders.DataProvider_Object@60099951]">m1</td> 
-  <td>main@1530446316</td>   <td></td> </tr>
-<tr bgcolor="ce7ed4">  <td>22/12/28 18:43:47</td>   <td>40</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProvider_Object.m2(java.lang.String)[pri:0, instance:dataProviders.DataProvider_Object@60099951]">m2</td> 
-  <td>main@1530446316</td>   <td></td> </tr>
-<tr bgcolor="ce7ed4">  <td>22/12/28 18:43:47</td>   <td>40</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProvider_Object.m2(java.lang.String)[pri:0, instance:dataProviders.DataProvider_Object@60099951]">m2</td> 
-  <td>main@1530446316</td>   <td></td> </tr>
-<tr bgcolor="ce7ed4">  <td>22/12/28 18:43:47</td>   <td>40</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProvider_Object.m2(java.lang.String)[pri:0, instance:dataProviders.DataProvider_Object@60099951]">m2</td> 
-  <td>main@1530446316</td>   <td></td> </tr>
-<tr bgcolor="ce7ed4">  <td>22/12/28 18:43:47</td>   <td>40</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProvider_Object.m2(java.lang.String)[pri:0, instance:dataProviders.DataProvider_Object@60099951]">m2</td> 
-  <td>main@1530446316</td>   <td></td> </tr>
+<tr bgcolor="a98386">  <td>22/12/30 12:57:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="JaggedArrays_DataProviders.sampleTest([Ljava.lang.Object;)[pri:0, instance:dataProviders.JaggedArrays_DataProviders@740cae06]">sampleTest</td> 
+  <td>main@1471948789</td>   <td></td> </tr>
+<tr bgcolor="a98386">  <td>22/12/30 12:57:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="JaggedArrays_DataProviders.sampleTest([Ljava.lang.Object;)[pri:0, instance:dataProviders.JaggedArrays_DataProviders@740cae06]">sampleTest</td> 
+  <td>main@1471948789</td>   <td></td> </tr>
+<tr bgcolor="a98386">  <td>22/12/30 12:57:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="JaggedArrays_DataProviders.sampleTest([Ljava.lang.Object;)[pri:0, instance:dataProviders.JaggedArrays_DataProviders@740cae06]">sampleTest</td> 
+  <td>main@1471948789</td>   <td></td> </tr>
 </table>
