--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a98386">  <td>22/12/30 12:57:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="JaggedArrays_DataProviders.sampleTest([Ljava.lang.Object;)[pri:0, instance:dataProviders.JaggedArrays_DataProviders@740cae06]">sampleTest</td> 
+<tr bgcolor="a98386">  <td>22/12/30 13:34:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PartialPassingDataUsingIndices.sampleTest(java.lang.String)[pri:0, instance:dataProviders.PartialPassingDataUsingIndices@740cae06]">sampleTest</td> 
   <td>main@1471948789</td>   <td></td> </tr>
-<tr bgcolor="a98386">  <td>22/12/30 12:57:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="JaggedArrays_DataProviders.sampleTest([Ljava.lang.Object;)[pri:0, instance:dataProviders.JaggedArrays_DataProviders@740cae06]">sampleTest</td> 
-  <td>main@1471948789</td>   <td></td> </tr>
-<tr bgcolor="a98386">  <td>22/12/30 12:57:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="JaggedArrays_DataProviders.sampleTest([Ljava.lang.Object;)[pri:0, instance:dataProviders.JaggedArrays_DataProviders@740cae06]">sampleTest</td> 
+<tr bgcolor="a98386">  <td>22/12/30 13:34:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PartialPassingDataUsingIndices.sampleTest(java.lang.String)[pri:0, instance:dataProviders.PartialPassingDataUsingIndices@740cae06]">sampleTest</td> 
   <td>main@1471948789</td>   <td></td> </tr>
 </table>
